# MLabled

./: .env.example  .gitignore  DEPLOY.md  MODELS_DEPLOY.md  README.md  docker-compose.models.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05474fc47c67_add_s3_bucket_to_images.py  1905d12d2ed8_initial.py  800ed8917417_model_server_new_fields.py
backend/app/: auth.py  config.py  main.py  schemas.py
backend/app/api/: annotations.py  auth.py  export.py  images.py  inference.py  models.py  projects.py  review.py  tasks.py
backend/app/models/: __init__.py  annotation.py  image.py  model_server.py  project.py  review.py  task.py  user.py
backend/app/services/: export_cvat.py  export_yolo.py  model_proxy.py  storage.py
backend/app/tasks/: __init__.py
backend/scripts/: create_admin.py
deploy/: README.md
deploy/backend/: .env.example  docker-compose.yml
deploy/frontend/: .env.example  docker-compose.yml  entrypoint.sh  nginx.conf
deploy/infrastructure/: .env.example  docker-compose.yml
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts  imageUrl.ts
frontend/src/components/: ExportDialog.tsx  LabelSelector.tsx  Layout.tsx  ModelSelector.tsx  ObjectsList.tsx  ToolBar.tsx
frontend/src/hooks/: useInteractiveSAM.ts
frontend/src/pages/: AnnotationPage.tsx  LoginPage.tsx  ModelsPage.tsx  ProjectsPage.tsx  ReviewPage.tsx  TasksPage.tsx
model_template/base/: __init__.py  app.py  base_model.py  schema.py
(+29 files in other folders)
